--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
         <h1 class="heading"><span>Details about me</span></h1>
         <div class="Row">
         <div class="det">
-             <h3><span>Name: </span>Blessian D Jutike</h3>
-             <h3><span>Age: </span>30</h3>
-             <h3><span>Gender: </span>Female</h3>
-             <h3><span>Email: </span>blessi000@hmail.com</h3>
-             <h3><span>Phone_no: </span>9875555555</h3>    
+             <h3><span>Name: </span>Shyam Phani Kumar Mahankali</h3>
+             <h3><span>Age: </span>21</h3>
+             <h3><span>Gender: </span>male</h3>
+             <h3><span>Email: </span>shyamphani777@gmail.com</h3>
+             <h3><span>Phone_no: </span>9032775079</h3>    
         </div>
     </div>
     </section>
@@ -46,21 +46,21 @@
         </tr>
         <tr>
             <td>SSCL</td>
-            <td>William Richards High School</td>
-            <td>KSEEB</td>
-            <td>70</td>
+            <td>Sree Vani E.M High School</td>
+            <td>Board of Secondary Education Andhra Pradesh</td>
+            <td>83</td>
         </tr>
         <tr>
             <td>Diploma</td>
-            <td>Govt Polyechnic Immadihalli</td>
-            <td>DTE</td>
-            <td>68</td>
+            <td>DJR College of Engeneering and Technology</td>
+            <td>SBTET</td>
+            <td>67</td>
         </tr>
         <tr>
-            <td>BE</td>
-            <td>New Horizon College</td>
-            <td>VTU</td>
-            <td>60</td>
+            <td>B.Tech</td>
+            <td>DVR & DR.HS MIC College of Technology</td>
+            <td>JNTUK</td>
+            <td>63</td>
         </tr>
     </table>
 </section>
@@ -89,17 +89,8 @@
     <div class="Row">
         <div class="det">
     <h3><span>Role: </span>Team member</h3>
-    <h3><span>Title: </span>Eye state detection of driver</h3>
-    <h3><span>Description: </span>Developing intelligent systems to prevent accidents
-                can be bery effective in minimizingaccident death toll. 
-                Drivers fatigue is one of the major causes of traffic 
-                accidents,particularly for drivers of large vehicles
-                (such as buses and heavy trucks)due to prolonged driving
-                in working conditions. This project detects the signs of 
-                fatigue and sleepiness in the face of the person at the 
-                time of driving in this model, the person's face is filmed 
-                by a camera in the first step by receiving video sequence, 
-                the level of drowsiness is detected.</h3>
+    <h3><span>Title: </span>Image Steganography Using Modified RSA Algorithm</h3>
+    <h3><span>Description: </span>To send an secret message securely by using steganography and cryptography techniques and modified rsa algorithm .</h3>
             </div>
 </div>
 </section>
