--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
        <div class="user">
        <img src="photo.jpg">
-       <h5 class="nm">M.SHYAM PHANI KUMAR</h5>
+       <h5 class="nm">M SHYAM PHANI KUMAR</h5>
        <p class="jb">Student</p>
        </div>
        <nav class="nv">
